Bug 1502313 - Remove concurrent audio input device limit. r=padenot, a=RyanVM

The limit only applied within a child process.

However, within a child process we already share cubeb stream when requesting
the same device multiple times, and disallow capturing from more than one device
at a time.

This limit no longer has any effect.

Differential Revision: https://phabricator.services.mozilla.com/D10339